--- a/Covid19IncidenceRasInhibitors/NAMESPACE
+++ b/Covid19IncidenceRasInhibitors/NAMESPACE
@@ -7,8 +7,8 @@ export(generateDiagnostics)
 export(launchEvidenceExplorer)
 export(prepareForEvidenceExplorer)
 export(runCohortMethod)
-export(submitResults)
 export(synthesizePositiveControls)
+export(uploadResults)
 import(DatabaseConnector)
 importFrom(stats,aggregate)
 importFrom(stats,density)
