--- a/Covid19ComplicationsRasInhibitors/DESCRIPTION
+++ b/Covid19ComplicationsRasInhibitors/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Marc A. Suchard [aut, cre]
 Maintainer: Marc A. Suchard <msuchard@ucla.edu>
 Description: A skeleton package, to be used as a starting point when implementing comparative effect studies.
 Depends:
-    R(>= 3.5.0),
+    R (>= 3.5.0),
     DatabaseConnector (>= 2.4.1)
 Imports:
     SqlRender (>= 1.6.3),
@@ -15,8 +15,8 @@ Imports:
     FeatureExtraction (>= 2.2.5),
     CohortMethod (>= 4.0.0),
     ggplot2,
-    ff,
-    ffbase,
+    dplyr,
+    rlang,
     MethodEvaluation (>= 0.3.1),
     OhdsiSharing (>= 0.1.3),
 	ParallelLogger (>= 1.1.1),
