fix tidyverse imports

--- a/Covid19IncidenceRasInhibitors/NAMESPACE
+++ b/Covid19IncidenceRasInhibitors/NAMESPACE
@@ -12,6 +12,14 @@ export(runCohortMethod)
 export(synthesizePositiveControls)
 export(uploadResults)
 import(DatabaseConnector)
+importFrom(dplyr,`%>%`)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,collect)
+importFrom(dplyr,group_by)
+importFrom(dplyr,pull)
+importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
+importFrom(rlang,.data)
 importFrom(stats,aggregate)
 importFrom(stats,density)
 importFrom(stats,pnorm)
